# amino_rs

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
amino-derive/: Cargo.toml
amino-derive/src/: lib.rs
amino-derive/src/field/: mod.rs
amino-derive/tests/: lib.rs
benchmarks/: Cargo.toml  build.rs
benchmarks/src/: lib.rs  varint.rs
conformance/: Cargo.toml  build.rs
conformance/src/: main.rs
conformance/tests/: conformance.rs
go-wire-derive/: Cargo.toml
go-wire-derive/src/: lib.rs
prost-amino-derive/: Cargo.toml  README.md
prost-amino-derive/src/: lib.rs
prost-amino-derive/src/field/: map.rs  message.rs  mod.rs  oneof.rs  scalar.rs
prost-build/: Cargo.toml  build.rs
prost-build/src/: code_generator.rs  lib.rs
prost-derive/: Cargo.toml
prost-derive/src/: lib.rs
prost-derive/src/field/: map.rs  message.rs  mod.rs  scalar.rs
prost-types/: Cargo.toml
prost-types/src/: lib.rs  protobuf.rs
protobuf/: build.rs
src/: encoding.rs  error.rs  lib.rs  message.rs  types.rs
tests/: Cargo.toml
tests/src/: amino.rs  bootstrap.rs  build.rs  debug.rs  lib.rs  unittest.rs
