[package]
name = "prost-amino"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.4.1"
authors = ["Dan Burkert <dan@danburkert.com>", "zaki <zaki@tendermint.com>", "Ismail Khoffi <ismail.khoffi@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/tendermint/amino_rs"
documentation = "https://docs.rs/prost"
readme = "README.md"
description = "An implementation of the Amino serialization for Tendermint/Cosmos in the Rust Language. See https://github.com/tendermint/go-amino for details."
keywords = ["protobuf", "serialization"]
categories = ["encoding"]

[workspace]
members = [
  "benchmarks",
  "conformance",
  "prost-build",
  "prost-amino-derive",
  "prost-types",
  "protobuf",
  "tests",
]
exclude = [
  # The fuzz crate can't be compiled or tested without the 'cargo fuzz' command,
  # so exclude it from normal builds.
  "fuzz",
]

[dependencies]
byteorder = "1"
bytes = "0.5"

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
log = "0.4"
prost-amino-derive = { version = "0.4.1", path = "prost-amino-derive" }
quickcheck = "0.6"
