[package]
name = "amino-derive"
version = "0.1.0"
authors = ["zaki", "Ismail Khoffi <ismail@tendermint.com"]

[lib]
proc-macro = true


[dependencies]
failure = "0.1"
itertools = "0.7"
proc-macro2 = "0.2"
quote = "0.4"
syn = {version = "0.12", features = [ "extra-traits" ] }
sha2 = "0.7"
digest ="0.7"