[package]
name = "amino-derive"
version = "0.1.0"
authors = ["zaki", "Ismail Khoffi <ismail@tendermint.com"]

[lib]
proc_macro = true

[dependencies]
failure = { version = "0.1", default-features = false, features = ["std"] }
itertools = "0.7"
proc-macro2 = "0.4.4"
quote = "0.6.3"
syn = { version = "0.14.1", features = [ "extra-traits" ] }
sha2 = "0.7"
digest ="0.7"
prost = "0.4.0"
prost-derive = "0.4.0"
bytes = "0.4.7"