[package]
name = "conformance"
version = "0.0.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
publish = false

[dependencies]
bytes = "0.4.7"
env_logger = { version = "0.5", default-features = false }
log = "0.3"
prost-amino = { path = ".." }
prost-amino-derive = { path = "../prost-amino-derive" }
tests = { path = "../tests" }

[build-dependencies]
protobuf = { path = "../protobuf" }
prost-build = { path = "../prost-build" }
