[package]
name = "prost-amino-derive"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.5.0"
authors = ["Dan Burkert <dan@danburkert.com>", "Ismail Khoffi <Ismail.Khoffi@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/danburkert/prost"
documentation = "https://docs.rs/prost-derive"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language modified to enable amino (de)serialization."

[lib]
proc_macro = true

[dependencies]
failure = { version = "0.1", default-features = false, features = ["std"] }
itertools = "0.7"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [ "extra-traits" ] }
sha2 = "0.9"
